# Forge

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
apps/forge/: CMakeLists.txt  main.cpp
apps/forge/commands/: add.cpp  auth.cpp  branch.cpp  clone.cpp  commit.cpp  config.cpp  diff.cpp  export_git.cpp  fetch.cpp  import_git.cpp  init.cpp  log.cpp  merge.cpp  pull.cpp  push.cpp  rebase.cpp  remote.cpp  reset.cpp  serve.cpp  stash.cpp  status.cpp  submodule.cpp  switch.cpp  tag.cpp
demo/.forge/: config  index
demo/.forge/refs/heads/: main
libs/cli/: CMakeLists.txt
libs/cli/include/forge_cli/: args.h  help.h
libs/cli/src/: args.cpp  help.cpp
libs/core/: CMakeLists.txt
libs/core/include/forge_core/checkout/: checkout.h
libs/core/include/forge_core/commit/: commit.h
libs/core/include/forge_core/config/: config.h
libs/core/include/forge_core/crypto/: aead.h  context.h  credentials.h  dpapi.h  file.h
libs/core/include/forge_core/diff/: diff.h
libs/core/include/forge_core/index/: index.h
libs/core/include/forge_core/merge/: merge.h
libs/core/include/forge_core/objectstore/: objectstore.h
libs/core/include/forge_core/rebase/: rebase.h
libs/core/include/forge_core/refs/: refs.h
libs/core/include/forge_core/remote/: transport.h  url.h
libs/core/include/forge_core/repo/: repo.h
libs/core/include/forge_core/stash/: stash.h
libs/core/include/forge_core/submodule/: submodule.h
libs/core/include/forge_core/tag/: tag.h
libs/core/include/forge_core/transfer/: frames.h  snapshot.h
libs/core/src/checkout/: checkout.cpp
libs/core/src/commit/: commit.cpp
libs/core/src/config/: config.cpp
libs/core/src/crypto/: aead.cpp  context.cpp  credentials.cpp  dpapi.cpp  file.cpp
libs/core/src/diff/: diff.cpp
libs/core/src/index/: index.cpp
libs/core/src/merge/: merge.cpp
libs/core/src/objectstore/: objectstore.cpp
libs/core/src/rebase/: rebase.cpp
libs/core/src/refs/: refs.cpp
libs/core/src/remote/: transport.cpp  url.cpp
libs/core/src/repo/: repo.cpp
libs/core/src/stash/: stash.cpp
libs/core/src/submodule/: submodule.cpp
libs/core/src/tag/: tag.cpp
libs/core/src/transfer/: frames.cpp  snapshot.cpp
libs/format/: CMakeLists.txt
libs/format/include/forge_format/: hash.h  pack.h  zstd.h
libs/format/src/: hash.cpp  pack.cpp  zstd.cpp
libs/platform/: CMakeLists.txt
libs/platform/include/forge_platform/: fs.h  path.h
libs/platform/src/: fs.cpp  path.cpp
libs/server/: CMakeLists.txt
libs/server/include/forge_server/: api.h  handlers.h
libs/server/src/: api.cpp  handlers.cpp
tests/: CMakeLists.txt  integration.cpp  remote_http.cpp  security.cpp  smoke.cpp
